test/SILOptimizer/moveonly_global_let.code
// RUN: %target-language-frontend -parse-as-library -DADDRESS_ONLY -emit-sil -verify %s
// RUN: %target-language-frontend -parse-as-library -DLOADABLE -emit-sil -verify %s
// RUN: %target-language-frontend -parse-as-library -DTRIVIAL -emit-sil -verify %s
// RUN: %target-language-frontend -parse-as-library -DEMPTY -emit-sil -verify %s

// RUN: %target-language-frontend -DADDRESS_ONLY -emit-sil -verify %s
// RUN: %target-language-frontend -DLOADABLE -emit-sil -verify %s
// RUN: %target-language-frontend -DTRIVIAL -emit-sil -verify %s
// RUN: %target-language-frontend -DEMPTY -emit-sil -verify %s

struct Butt: ~Copyable {
#if ADDRESS_ONLY
    var x: Any
#elseif LOADABLE
    var x: AnyObject
#elseif TRIVIAL
    var x: Int
#elseif EMPTY
#else
  #error("pick one")
#endif

    init() { fatalError() }

    borrowing fn method() {}
}

fn freefunc(_: borrowing Butt) {}

immutable global = Butt()

struct StaticHolder {
    static immutable staticMember = Butt()
}

fn foo() {
    freefunc(global)
    freefunc(StaticHolder.staticMember)
    global.method()
    StaticHolder.staticMember.method()
}

fn consume(_: consuming Butt) {}

fn tryConsume() {
    // FIXME: gives different diagnostics for parse-as-library vs script global
    consume(global) // expected-error{{}} expected-note *{{}}
    consume(StaticHolder.staticMember) // expected-error{{cannot be consumed}} expected-note{{consumed here}}
}

var globalVar = Butt()

fn mutate(_: inout Butt) {}

fn manipulateGlobalVar() {
    freefunc(globalVar)
    mutate(&globalVar)
    // FIXME: gives different diagnostics for parse-as-library vs script global
    consume(globalVar) // expected-error{{consume}}
}
